# python-project-83

./: .gitignore  Makefile  README.md  build.sh  database.sql  pyproject.toml  requirements.txt  setup.cfg  start.sh
.github/workflows/: ci.yml
page_analyzer/: __init__.py  app.py  db.py  http.py  models.py  utils.py
page_analyzer/clients/: http.py
page_analyzer/controllers/: urls.py  urls_controller.py
page_analyzer/models/: check.py  checks.py  site.py  url.py  urls.py
page_analyzer/parsers/: html.py
page_analyzer/templates/: index.html  layout.html  list.html  show.html  sites.html
